fixing spacing on mobile floor

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -108,7 +108,7 @@
 
 @media screen and (max-width: 375px){
     .search-bar {
-        margin: 20px 0px 0px 7px;
+        margin: 20px 0px 0px 8px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -158,7 +158,7 @@
         justify-content: flex-end;
         width: 325px;
         margin-top: -71px;
-        margin-left: -27px;
+        margin-left: -25px;
     }
 
     .search-location {
