--- a/src/pages/ServiceFloor/ServiceFloor.css
+++ b/src/pages/ServiceFloor/ServiceFloor.css
@@ -61,7 +61,7 @@
         font-size: 12px;
         border-radius: 4px;
         height: 15px;
-        margin-left: -2.5px;
+        margin-left: -1px;
     }
 
     .post-button {
